# library-ops

./: .alexrc  .code-review-graphignore  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .npmrc  .pre-commit-config.yaml  .repomixignore  .semgrep.yml  .vale.ini  .valeignore  AGENTS.md  CHANGELOG.md  PACKAGE_MANIFEST.md  README.md  SETUP.md  commitlint.config.cjs  cspell.json  env.example  llms.txt  lychee.toml  manage.py  package-lock.json  package.json  promptfooconfig.yaml  pyproject.toml  render.yaml  repomix.config.json
.agents/skills/clarify-and-goal/: SKILL.md
.agents/skills/code-intelligence/: SKILL.md
.agents/skills/community-preset-audit/: SKILL.md
.agents/skills/define-goal/: SKILL.md
.agents/skills/django-feature/: SKILL.md
.agents/skills/github-governance/: SKILL.md
.agents/skills/playwright/: SKILL.md
.agents/skills/playwright-interactive/: SKILL.md
.agents/skills/prd-architect/: SKILL.md
.agents/skills/promptfoo-evals/: SKILL.md
.codex/: config.toml  hooks.json
.codex-session-notes/: continuation.md
.codex/agents/: code-intelligence-architect.toml  command-runner.toml  context-gatherer.toml  coordinator.toml  debugger.toml  devops-release-manager.toml  docs-researcher.toml  implementer.toml  planning-orchestrator.toml  prd-architect.toml  qa-engineer.toml  researcher.toml  retrospective-analyst.toml  reviewer.toml  search-architect.toml  security-architect.toml  seed-data-engineer.toml  single-file-implementer.toml  skills-maintenance.toml  spark-command-runner.toml  spark-summarizer.toml  speckit-governor.toml  taskmaster-governor.toml  ux-design-architect.toml
.codex/hooks/: serena_hook.py  session_start_notice.py  session_stop_notice.py
.codex/references/: clarification-and-goals.md  context-and-tooling-strategy.md  context-lineage.md
.codex/rules/: default.rules
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  commitlint.yml  release.yml
.husky/: pre-commit  pre-push
.specify/memory/: constitution.md
.taskmaster/: AGENTS.md  README.md  config.example.json
.taskmaster/docs/: prd.md  runtime-policy.md
.taskmaster/tasks/: tasks.json
.taskmaster/templates/: rpg-prd-template.md
docs/: AGENTS.md  ARCHITECTURE.md  DESIGN.md  PRD.md  README.md  runbook.md
docs/adr/: 0001-source-of-truth-and-planning-model.md  0002-application-architecture-and-domain-boundaries.md  0003-search-ai-and-data-provenance.md  0004-agent-toolchain-mcp-and-context-optimization.md  0005-delivery-quality-security-and-release.md  0006-design-and-ux-workflow.md  0007-agent-skills-and-meta-system-governance.md  0008-two-level-agent-orchestration-and-spark-fanout.md  AGENTS.md  index.md  template.md
docs/agent-system/: clarification-and-goals.md  context-and-tooling-strategy.md  prompting-and-context-patterns.md
docs/architecture/: architecture-approach.md
docs/decisioning/: socratic-decision-framework.md
docs/design/: evaluator-design-handoff.md  mockup-plan.md  wireframes.md
docs/evaluation/: demo-script.md  eval-strategy.md  promptfoo-examples.md  screenshot-matrix.md
docs/explanation/: README.md
docs/how-to/: README.md  evaluator-demo.md  figma-mcp-login.md  onboard-serena.md  run-promptfoo-suites.md  upgrade-ollama-local.md  use-code-review-graph.md
docs/prd/: prd-format-comparison.md
docs/process/: quality-gates.md  retrospective.md  sdlc.md
docs/reference/: codex-cli-vs-ide.md  context-lineage.md  question-packet-schema.md  toolchain-matrix.md
docs/setup/: local-and-github-setup.md
docs/spec-kit/: community-preset-evaluation.md
docs/tutorials/: README.md
evals/control-plane/: README.md  prompt-contract.md
evals/fixtures/: control-plane-provider-case.md
evals/redteam/: control-plane-redteam.template.yaml
evals/release/: control-plane-provider.template.yaml  control-plane-provider.yaml
policy/: codex.rego  github_actions.rego
rules/ast-grep/: no-raw-ai-suggestion-apply.yml  no-selector-mutation.yml  no-view-direct-loan-mutation.yml
scripts/: check_control_plane.py  check_hosted_demo.py  cleanup_transient_artifacts.sh  codex-coordinator.sh  codex-runtime-env.sh
specs/: AGENTS.md
specs/001-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/libraryops/: AGENTS.md  __init__.py  api.py
tests/: AGENTS.md  conftest.py  factories.py
tests/control_plane/: AGENTS.md  README.md  __init__.py  _support.py  conftest.py  contract.toml  test_contracts.py  test_github_helper_scripts.py  test_governance_surfaces.py  test_hooks.py  test_hosted_demo_helper.py  test_property_topology.py  test_serena_hook.py  test_session_start_notice.py  test_session_stop_notice.py
tests/e2e/: AGENTS.md  conftest.py  test_auth_surface.py  test_catalog_navigation.py  test_circulation_search.py  test_navigation.py  visual_regression.py
tests/integration/: AGENTS.md
tests/property/: __init__.py  conftest.py
tests/smoke/: AGENTS.md  test_api_surface.py  test_django_bootstrap.py  test_django_settings.py  test_production_settings.py  test_render_blueprint.py
tests/unit/: AGENTS.md
(+191 files in other folders)
